# pipeshub-ai

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.integration  README.md  SECURITY.md
backend/python/: pyproject.toml  pytest.ini  requirements_langgraph.txt
backend/python/app/: connectors_main.py  docling_main.py  embedding_main.py  extraction_main.py  indexing_main.py  parsing_main.py  query_main.py
backend/python/app/agent/: README.md  __init__.py
backend/python/app/api/: agent_api.py
backend/python/app/config/: configuration_service.py
backend/python/app/containers/: connector.py  docling.py  extraction.py  indexing.py  parsing.py
backend/python/app/core/: celery_app.py
backend/python/app/events/: events.py  processor.py
backend/python/app/exceptions/: indexing_exceptions.py
backend/python/app/health/: health.py
backend/python/app/migrations/: kb_apps_migration.py
backend/python/app/models/: agents.py  blocks.py  entities.py
backend/python/app/sandbox/: local_executor.py  package_policy.py
backend/python/app/schema/: node_schema_registry.py
backend/python/app/services/: agent_service.py  base_client.py  workflow_orchestrator.py
backend/python/app/setups/: connector_setup.py  indexing_setup.py  query_setup.py
backend/python/app/telemetry/: backend.py  event_buffer.py  identity.py  metrics_refresh.py  middleware.py  pusher.py  setup.py
backend/python/app/utils/: aimodels.py  api_call.py  attachment_utils.py  chat_helpers.py  citations.py  embedding_server_client.py  execute_query.py  fetch_full_record.py  fetch_slack_nearby_messages.py  fetch_slack_thread.py  indexing_helpers.py  libreoffice_convert.py  llm.py  logger.py  oauth_config.py  pattern_match.py  query_decompose.py  request_context.py  runtime_threads.py  storage_path.py  streaming.py  tool_handlers.py
backend/python/tests/: conftest.py
backend/python/tests/unit/: test_connectors_main.py  (+3 more)
integration-tests/: .env.example  conftest.py  env.local.template  env.prod.template  pyproject.toml  pytest.ini
integration-tests/connectors/: conftest.py
integration-tests/connectors/azure_files/: azure_files_integration_test.py
integration-tests/connectors/confluence/: confluence_integration_test.py  confluence_knowledge_hub_test_utils.py  confluence_mutation_cases.py  confluence_v1_test_utils.py  conftest.py
integration-tests/connectors/jira/: conftest.py  constants.py  jira_block_utils.py  jira_expected.py  jira_integration_test.py  jira_test_utils.py
integration-tests/connectors/linear/: conftest.py  constants.py  linear_expected.py  linear_integration_test.py  linear_test_utils.py
integration-tests/enterprise_search/agent/: integration_test_agents.py
integration-tests/enterprise_search/agent_conversation/: integration_test_agent_conversation_stream.py
integration-tests/helper/: ai_models_setup.py  config.py  graph_provider.py  graph_provider_utils.py  kb_upload_sse.py  openapi_search_validator.py  pipeshub_client.py  second_user_auth.py
integration-tests/helper/arango_test_provider/: test_arango_provider.py
integration-tests/helper/clients/: agents_client.py  ai_models_client.py  auth_client.py  config_client.py  conversations_client.py  kb_client.py  oauth_client.py  org_client.py  search_client.py  teams_client.py  user_groups_client.py  users_client.py
integration-tests/helper/http/: api_client.py  protocol.py
integration-tests/helper/neo4j_integration/: test_neo4j_provider.py
integration-tests/messaging/: conftest.py  test_e2e_record_pipeline.py  test_messaging_integration.py
integration-tests/parsers/: integration_test_html_to_blocks.py  integration_test_markdown_to_blocks.py  integration_test_txt_to_blocks.py
integration-tests/parsers/fixtures/: changelog.expected.json  changelog.md  changelog_html.expected.json  changelog_html.html  complex_image_and_nesting_html.expected.json  complex_image_and_nesting_html.html  complex_image_and_nesting_md.expected.json  complex_image_and_nesting_md.md  distributed_knowledge.expected.json  distributed_knowledge.md  engineering_onboarding.expected.json  engineering_onboarding.md  engineering_onboarding_html.expected.json  engineering_onboarding_html.html  hospital_sop_patient_admission.expected.json  hospital_sop_patient_admission.txt  hr_employee_policy.expected.json  hr_employee_policy.txt  invoice.expected.json  invoice.html  meeting_minutes_nov2024.expected.json  meeting_minutes_nov2024.txt  monthly_financial_report.expected.json  monthly_financial_report.txt  report-card.expected.json  report-card.html  research.expected.json  research.md
integration-tests/response-validation/ai-model-providers/: integration_test_ai_model_providers.py
integration-tests/response-validation/auth/: integration_test_orgAuthConfig.py  integration_test_userAccount.py
integration-tests/response-validation/configuration-manager/: integration_test_web_search.py
integration-tests/response-validation/enterprise-search/: conftest.py
integration-tests/response-validation/helper/: openapi_schema_validator.py
integration-tests/response-validation/knowledgebase/: conftest.py  integration_test_folder_crud.py  integration_test_knowledgebase_crud.py  integration_test_knowledgebase_records_crud.py  integration_test_permissions_crud.py  integration_test_upload_limits.py
integration-tests/response-validation/oauth_app/: integration_test_oauthApps.py
integration-tests/response-validation/oauth_provider/: integration_test_oauthProvider.py
integration-tests/response-validation/toolsets/: integration_test_get_my_toolsets.py
integration-tests/response-validation/user_management/: integration_test_org.py  integration_test_teams.py  integration_test_user_groups.py  integration_test_users.py
integration-tests/validation/: graph_edge_validator.py  graph_entity_validator.py
integration-tests/validation/schemas/: app_metadata.yaml  app_role.yaml  app_user_group.yaml  file_record.yaml  link_record.yaml  record.yaml  record_group.yaml  ticket_record.yaml  webpage_record.yaml
(+1435 files in other folders)
