[project]
name = "pipeshub-integration-tests"
version = "0.2.0"
description = "Full lifecycle integration test suite for Pipeshub connectors against test.pipeshub.com and remote Neo4j."
requires-python = ">=3.12"
dependencies = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "pytest-order>=1.1.0",
  "pytest-timeout>=2.2.0",
  "aioboto3>=12.0.0",
  "aiohttp==3.13.4",
  "aiokafka==0.12.0",
  "aiolimiter==1.2.1",
  "azure-ai-formrecognizer==3.3.3",
  "azure-storage-blob==12.28.0",
  "azure-storage-file-share==12.19.0",
  "bcrypt>=4.0.0",
  "beautifulsoup4==4.12.3",
  "box-sdk-gen==1.12.0",
  "Brotli==1.2.0",
  "CairoSVG==2.8.2",
  "celery==5.4.0",
  "confluent-kafka==2.8.0",
  "cachetools==6.2.4",
  "cloudscraper==1.2.71",
  "cryptography==46.0.7",
  "curl-cffi==0.14.0",
  "dependency-injector==4.44.0",
  "discord.py==2.6.3",
  "docling==2.60.0",
  "dropbox==12.0.2",
  "docx2python==3.5.0",
  "etcd3==0.12.0",
  "evernote3>=1.25.14",
  "fastapi==0.115.6",
  "fastmcp==3.2.0",
  "fastembed==0.5.1",
  "feedparser>=6.0.0",
  "trafilatura>=2.0.0",
  "html-to-markdown==2.3.0",
  "markdownify==1.2.2",
  "httpx==0.28.1",
  "PyGithub==2.8.1",
  "python-gitlab==6.4.0",
  "google-api-python-client==2.161.0",
  "google-auth-oauthlib==1.2.1",
  "google-cloud-storage==2.18.0",
  "Jinja2==3.1.6",
  "jsonschema==4.23.0",
  "langchain-anthropic==1.2.0",
  "langchain-aws==1.1.0",
  "langchain-cohere==0.5.0",
  "langchain-community==0.4.1",
  "langchain-experimental==0.4.0",
  "langchain-fireworks==1.1.0",
  "langchain-google-genai==4.2.1",
  "langchain-google-vertexai==2.1.2",
  "langchain-groq==1.1.0",
  "langchain-huggingface==1.1.0",
  "langchain-mistralai==0.2.12",
  "langchain-ollama==1.0.0",
  "langchain-openai==1.1.14",
  "langchain-qdrant==1.0.0",
  "langchain-voyageai==0.3.0",
  "langchain-xai==1.1.0",
  "langchain==1.1.3",
  "langgraph==1.0.10rc1",
  "langgraph-prebuilt==1.0.8",
  "linkedin-api-client>=0.3.0",
  "mail-parser-reply==1.36",
  "markdown==3.8.1",
  "mmh3==4.1.0",
  "monday-api-python-sdk>=0.1.0",
  "msgspec==0.20.0",
  "snowflake-connector-python",
  "clickhouse-connect",
  "msgraph-sdk==1.16.0",
  "nats-py==2.1.0",
  "notion-client==2.2.1",
  "nltk==3.9.4",
  "numpy==2.3.2",
  "opencv-python-headless==4.11.0.86",
  "openpyxl==3.1.5",
  "opik==1.10.60",
  "pagerduty>=5.0.0",
  "pandas==2.2.3",
  "Pillow<12.0.0",
  "pdf2image==1.17.0",
  "pillow-avif-plugin==1.5.5",
  "protobuf>=4.25.0,<6",
  "pydantic==2.12.5",
  "py-trello==0.20.1",
  "PyMuPDF==1.24.14",
  "python-arango==8.1.5",
  "python-docx==1.1.2",
  "neo4j>=5.0.0",
  "pymongo>=4.5.0",
  "python-dotenv==1.2.2",
  "pyyaml>=6.0",
  "redshift_connector==2.1.7",
  "python-jose==3.4.0",
  "python-multipart==0.0.27",
  "qdrant-client==1.13.1",
  "redis==5.2.1",
  "requests-toolbelt==1.0.0",
  "requests==2.33.0",
  "sentence-transformers==3.4.1",
  "slack-sdk==3.27.0",
  "spacy==3.8.2",
  "tenacity==8.5.0",
  "thrift>=0.16.0",
  "uuid==1.30",
  "uvicorn==0.35",
  "zstandard==0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helper", "connectors", "connectors.*", "messaging*", "response-validation*", "enterprise_search*", "validation"]

[tool.setuptools.package-data]
validation = ["schemas/*.yaml", "schemas/edges/*.yaml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
etcd3 = { git = "https://github.com/kragniz/python-etcd3.git", rev = "e58a899579ba416449c4e225b61f039457c8072a" }
